# wav2vec2_cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  diagram.md  requirements.txt
app/: gui_main.cpp  main.py  main.qml
libs/onnxruntime/lib/: libonnxruntime.dylib
notes/: april6.md  april7_trainlog.md  march31.md
output/: benchmark_4models_per_utterance.csv  benchmark_4models_summary.csv  benchmark_example_predictions.csv  benchmark_original_vs_finetuned.csv  benchmark_original_vs_finetuned_summary.csv  benchmark_summary_cross_dataset.csv  benchmark_test_speakers.csv  experiment_results_per.csv  experiment_results_raw.csv  package.json  phoneme_benchmark_per_utterance.csv  phoneme_benchmark_summary.csv  speaker_map.json  tal80_speaker_map_training.json  tal80_test_split_existing.csv  tal80_utterances_by_length.csv  uxtd_speaker_map.json  uxtd_test_split.csv
scripts/: benchmark_4models.py  benchmark_4models_with_speaker_maps.py  benchmark_cross_dataset.py  benchmark_original_vs_finetuned.py  export_combined_to_onnx.py  export_combined_top_layer_to_onnx.py  export_to_onnx.py  export_uxtd_top_layer_to_onnx.py  export_vocabs.py  finetune_wav2vec2_combined.py  finetune_wav2vec2_tal80.py  finetune_wav2vec2_uxtd.py  gemini_realtime_phoneme.py  generate_speaker_maps.py  model.py  onnx_model.py  realtime_phoneme.py  requirements.txt  wandb_test.py
src/: benchmark_requirements.txt  check_cuda.py  chunk_experiment.cpp  chunk_experiment.py  chunk_experiment2.py  main.cpp  phoneme_benchmark.py  realtime_autoresample.cpp  run_onnx_phonemes.py  run_whisperx.py  sort_by_utterance_length.py
tests/: utterances_by_length.csv
vocab/: vocab.json
